# alfred

./: .gitignore  LICENSE  README.md  install.bat  install.ps1  install.sh  pyproject.toml  run.py
.github/: ci.yml  test-installers.yml
.github/workflows/: ci.yml  code-quality.yml  pr-analysis.yml  pr-comments.yml  test-installers.yml
alfred/: __init__.py  agent.py  api_balance_tracker.py  cli.py  config.py  cost_tracker.py  github_auth.py  github_integration.py  prompts.py  review_history.py
tests/: example_buggy.py
