[tool.poetry]
name = "alfred" 
version = "0.1.0"
description = "AI-powered code reviewer CLI tool"
authors = ["Yousuf Mohiuddin (yousufmohiuddin0529@gmail.com)"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
anthropic = "^0.40.0"
typer = ">=0.16.0"
rich = "^13.7.0"
click = "<8.2.0"
python-dotenv = "^1.0.0"
PyGithub = "^2.1.1"
requests = "^2.31.0"

[poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
pytest = "^7.4.0"

[tool.poetry.scripts]
alfred = "alfred.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"